[package]
name = "ethbalance"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version="0.7.9", features = ["http2", "macros"] }
axum-prometheus = "0.7.0"
clap = { version = "4.5.21", features = ["derive", "env"] }
metrics-process = "2.4.0"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.41.1", features = ["full", "tracing"] }
tokio-test = "0.4.4"
tower = { version = "0.5.1", features = ["tracing", "tokio"] }
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["json", "env-filter"] }
